# Arhiver

./: CMakeLists.txt  README.md  cICoder.hpp  main.cpp
HaffmanCoder/h/: haffman_coder.h
HaffmanCoder/src/: haffman_coder.cpp
HaffmanCoder/src/WorksWithFiles/: FilesWork.cpp  FilesWork.hpp
HaffmanCoder/src/cIBitPacker/: cIBirPacker.hpp  cIBitPacker.cpp
HaffmanCoder/src/haffman_table/: HaffmanTable.cpp  HaffmanTable.h
HaffmanCoder/src/haffman_tree/: HaffmanTree.cpp  HaffmanTree.h
